fixed icon z-index

--- a/src/Components/Pages/Sendform/Sendform.css
+++ b/src/Components/Pages/Sendform/Sendform.css
@@ -170,7 +170,7 @@ margin: 15px 0px;
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 400;
+    z-index: 500;
     cursor: pointer;
 }
 .sendform .externalLinks{
@@ -242,7 +242,9 @@ input{
 
      .sendform #menuicon{
           display: inline;
+          z-index: 1000;
         }
+        
         /* .rowform{
             margin-right: auto;
             margin-left: auto;
